--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-p {
+p.first-task {
    color: #015668;
    background: #0D91A1;
    width: 200px;
@@ -11,3 +11,39 @@ p {
    font-size: 25px;
    font-family: 'Shadows Into Light', cursive;
 }
+
+/*second task's code */
+html {
+   background:#202020;
+ }
+ main {
+   border: 6px solid #4285f4;
+   width: 200px;
+   margin: 10px;
+   padding: 0px;
+ }
+ p {
+   height: 40px;
+   margin: 0;
+   padding: 18px 0 0 0;
+   font-family: 'Lobster Two', cursive;
+   font-size: 20px;
+ }
+ .north {
+   background: #E67676;
+ }
+ .east {
+   background: #F2F062;
+ }
+ .south {
+   background: #A9E6E6;
+ }
+ .west {
+   background: #7692E4;
+ }
+ .centered {
+   text-align: center;
+ }
+ .bold-text {
+   font-weight: bold;
+ }
